feat: add icons

--- a/src/templates/email.html
+++ b/src/templates/email.html
@@ -73,7 +73,7 @@
             <tr>
               <td>
                 <a href="minhacena.org">
-                  <img src="https://raw.githubusercontent.com/MinhaCena/email-template/c6a59de9e00e8415b11627eaa7f8f96dbfef7757/Group%20401.png" alt="logo do MinhaCena" >
+                  <img src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/minhacena.png" alt="logo do MinhaCena" >
                 </a>
               </td>
             </tr>
@@ -120,13 +120,13 @@
               <td>
                 <a href="https://www.instagram.com/projetominhacena/">
                   <img 
-                    src="https://i.imgur.com/K3B4wb8.png" 
+                    src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/instagram.png" 
                     alt="Instagram do MinhaCena"  title="Instagram do MinhaCena">
                 </a>
               </td>
               <td>
                 <a href="https://www.linkedin.com/company/minhacena-org/"> 
-                  <img src="https://raw.githubusercontent.com/MinhaCena/assets/main/linkedin.svg" 
+                  <img src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/linkedin.png" 
                   width="32" alt="Linkedin do MinhaCena" title="Linkedin do MinhaCena">
                 </a>
               </td>
