feat: add templates

--- a/src/templates/illustrator-approved.html
+++ b/src/templates/illustrator-approved.html
@@ -45,9 +45,6 @@
     .illustrator{
       background-color: #B76CA9;
     }
-    .institution{
-      background-color: #6637F6;
-    }
     .container{
       padding: 0 24px;
     }
@@ -68,7 +65,7 @@
     <table class="main" width="100%">
       <!--Header-->
       <tr>
-        <td class="container {{#if isIllustrator}}illustrator{{else}}institution{{/if}}" height="72" style="padding-top: 16px; padding-bottom: 16px;">
+        <td class="container illustrator" height="72" style="padding-top: 16px; padding-bottom: 16px;">
           <table width="100%">
             <tr>
               <td>
@@ -95,10 +92,8 @@
               </td>
             </tr>
             <tr>
-              <td style="padding: 16px 0; line-height: 32px;">
-                Em breve você receberá um login e senha para acessar a plataforma, 
-                enquanto isso, acompanhe nossas comunicações através das nossas 
-                redes sociais.
+              <td style="padding: 16px 0; line-height: 24px;">
+                Em breve você receberá um login e senha para acessar a plataforma, enquanto isso, acompanhe nossas comunicações através das nossas redes sociais.
               </td>
             </tr>
             <tr>
@@ -111,11 +106,11 @@
       </tr>
      <!--Footer-->
       <tr>
-        <td height="142" class="container {{#if isIllustrator}}illustrator{{else}}institution{{/if}}">
+        <td height="142" class="container illustrator">
           <table width="100%">
             <tr>
               <td style="color: #F8F8F8; font-weight: 500; font-size: 16px;">
-                &copy; MinhaCena.org
+                &copy; <a style="color: #F8F8F8; text-decoration: none;" href="minhacena.org">MinhaCena.org</a>
               </td>
               <td>
                 <a href="https://www.instagram.com/projetominhacena/">
