fix: icons size

--- a/src/templates/illustrator-disapproved.html
+++ b/src/templates/illustrator-disapproved.html
@@ -70,7 +70,7 @@
             <tr>
               <td>
                 <a href="minhacena.org">
-                  <img src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/minhacena.png" alt="logo do MinhaCena" >
+                  <img width="164" src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/minhacena-logo.png" alt="logo do MinhaCena" >
                 </a>
               </td>
             </tr>
@@ -111,14 +111,14 @@
               <td>
                 <a href="https://www.instagram.com/projetominhacena/">
                   <img 
-                    src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/instagram.png" 
-                    alt="Instagram do MinhaCena"  title="Instagram do MinhaCena">
+                    src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/instagram-logo.png" 
+                    width="32" height="32" alt="Instagram do MinhaCena"  title="Instagram do MinhaCena">
                 </a>
               </td>
               <td>
                 <a href="https://www.linkedin.com/company/minhacena-org/"> 
-                  <img src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/linkedin.png" 
-                  width="32" alt="Linkedin do MinhaCena" title="Linkedin do MinhaCena">
+                  <img src="https://raw.githubusercontent.com/MinhaCena/email-templates/main/src/templates/assets/linkedin-logo.png" 
+                  width="32" height="32" alt="Linkedin do MinhaCena" title="Linkedin do MinhaCena">
                 </a>
               </td>
             </tr>
